--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "18.1.0",
     "react-chartjs-2": "^4.1.0",
     "react-dom": "18.1.0",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1",
     "sweetalert2": "^11.4.14"
   },
   "devDependencies": {
